nhome page too long, fixing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -28,8 +28,8 @@ body {
 .banner-text h1 {
     text-align: center;
     color: #fff;
-    font-size: 50px;
-    margin-top: 20%;
+    font-size: 100px;
+    margin-top: -40%;
 
 }
 
@@ -54,6 +54,7 @@ body {
     height: 25px;
     background: rgba(255, 255, 255, 0.2);
     animation: animate 20s linear infinite;
+    bottom: -150px;
 }
 .box-area li:nth-child(1) {
     left: 86%;
@@ -75,7 +76,7 @@ body {
     animation-delay: 5.5s;
 }
 .box-area li:nth-child(4) {
-    left: 70%;
+    left: 42%;
     width: 150px;
     height: 150px;
     animation-delay: 0s;
